<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yeni"
    tools:context=".MainActivity">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_read"
        android:layout_width="239dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="84dp"
        android:background="#000000"
        android:text="@string/button_read"
        android:textColor="@android:color/white"
        app:backgroundTint="#530101"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtByte"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edtInt"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toEndOf="@+id/edtByte"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edtBool"
        android:layout_width="92dp"
        android:layout_height="42dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/makina_adi_txt"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="89dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="56dp"
        android:text="@string/decimal_bilgisi_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtByteBilgi" />

    <TextView
        android:id="@+id/txtByteBilgi"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/decimal_bilgisi_sayisal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtIntBilgi"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:text="@string/int_bilgisi_sayisal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:text="@string/int_bilgisi_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txtIntBilgi" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="209dp"
        android:layout_height="33dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:text="@string/makina_adi"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/bool_bilgisi_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtBoolBilgi"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/bool_bilgisi_sayisal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button

        android:id="@+id/btnIslem"
        android:layout_width="136dp"
        android:layout_height="95dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="84dp"
        android:text="İşlem Yap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/button_read"
        android:onClick="ikinci_ekrana_gecis"/>

</android.support.constraint.ConstraintLayout>